--- a/README
+++ b/README
@@ -6,3 +6,37 @@ It implements the following data structure:
 
     * flat segment tree 
     * segment tree
+    * rectangle set
+
+Segment Tree
+
+Segment tree is a balanced-binary-tree based data structure efficient 
+for detecting all intervals (or segments) that contain a given point.  
+The segments may overlap with each other.  The end points of stored 
+segments are not inclusive, that is, when an interval spans from 2 to 
+6, an arbitrary point x within that interval can take a value of 2 <= 
+x < 6.  
+
+Flat Segment Tree
+
+Flat segment tree is a variant of segment tree that is designed to 
+store a collection of non-overlapping segments.  This structure is 
+efficient when you need to store values associated with 1 dimensional 
+segments that never overlap with each other.  Like segment tree, 
+stored segments' end points are non-inclusive.  
+
+Rectangle Set
+
+Rectangle set stores 2-dimensional rectangles and provides an 
+efficient way to query all rectangles that contain a given point in 
+2-dimensional space.  It internally uses nested segment tree.  Each 
+rectangle is defined by two 2-dimensional points: the top-left and 
+bottom-right points, and the bottom-right point is non-inclusive.  For 
+instance, if a rectangle ranges from (x=2, y=2) to (x=10, y=20), then 
+a 2-dimension point A (x,y) is said to be inside that rectangle only 
+when 2 <= x < 10 and 2 <= y < 20.
+
+HOWTO
+
+Please take a look at simple example files under the 'example' 
+directory on how to use these data structures.
