--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+  * added new insert() method to flat_segment_tree that takes a 
+    positional hint to boost insertion speed.  Also, all three 
+    insert() methods now return the start position of the segment that 
+    an inserted segment belongs to.  
+
   * slight performance improvement on the iterators of 
     flat_segment_tree.
 
