--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+mdds 0.5.1
+
+  * fixed build issues on Windows, using MSVC compilers.
+
 mdds 0.5.0
 
   * flat_segment_tree's search methods now return a std::pair of 
