--- a/NEWS
+++ b/NEWS
@@ -19,6 +19,8 @@
   * fixed a bug in flat_segment_tree::operator==() where two different
     containers were incorrectly evaluated to be equal.
 
+  * added quickcheck test code.
+
 mdds 0.5.1
 
   * fixed build issues on Windows, using MSVC compilers.
