Added David to AUTHORS.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
-Kohei Yoshida  <kohei.yoshida@gmail.com>
+Kohei Yoshida  <kohei.yoshida@gmail.com> (Maintainer)
+David Tardon  <dtardon@redhat.com>
 
