--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+mdds 0.5.3
+
+* mixed_type_matrix
+
+  * re-implemented the filled storage for better performance, with two 
+    separate implementations for zero and emtpy matrix types.  The 
+    newer implementation should improve object creation time 
+    considerably.
+
 mdds 0.5.2
 
 * flat_segment_tree
