--- a/NEWS
+++ b/NEWS
@@ -8,10 +8,15 @@
 
   * improved performance of size() method by caching it.
 
-* grid_map (new)
+* multi_type_vector (new)
 
-  * new data structure.  Still experimental and its API may still go
-    through backward-incompatible changes.
+  * new data structure to support efficient storage of data of different
+    types.
+
+* multi_type_matrix (new)
+
+  * new data structure to eventually replace mixed_type_matrix.  It uses
+    multi_type_vector as its backend storage.
 
 mdds 0.5.4
 
