--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,8 @@
 Kohei Yoshida  <kohei.yoshida@gmail.com> (Maintainer)
 David Tardon  <dtardon@redhat.com>
-
+Markus Mohrhard <markus.mohrhard@googlemail.com>
+Petr Mladek <pmladek@suse.cz>
+Caolán McNamara <caolanm@redhat.com>
+Philipp Thomas <pth@suse.de>
+Stephan Bergmann <sbergman@redhat.com>
+Tomáš Chvátal <scarabeus@gentoo.org>
