--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+* multi_type_vector
+
+  * set() method (single-parameter variant) to return iterator that
+    references the block where the value is set.
+
 mdds 0.6.1
 
 * all
