--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,9 @@
   * set() method (single-parameter variant) to return iterator that
     references the block where the value is set.
 
+  * fixed bugs in set() method (single-parameter variant) which would
+    insert a new block at incorrect position.
+
 mdds 0.6.1
 
 * all
