Mention about the addition of .pc file in NEWS (thanks to Fridrich).

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,8 @@
 
+* all
+
+  * added .pc file for pkg-config.
+
 * multi_type_vector
 
   * added char and unsigned char types to the standard types supported
