Add a block function template for 3-custom element type case.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+
+* multi_type_vector
+
+  * added another block function template to make it easier to declare
+    container with 3 custom element types.
+
 mdds 0.8.1
 
 * multi_type_vector
