Implement one use case of swap(). Still a lot more to go...
While I was at it, discovered and fixed memory leak in set() which
was causd by slicing. Added a preventative measure by making the
destructor of base_element_block protected.

--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,10 @@
     * std::pair<const_iterator, size_type>
       position(const const_iterator& pos_hint, size_type pos) const
 
+  * fixed a memory leak in
+
+    * set(size_type pos, const _T& it_begin, const _T& it_end).
+
 mdds 0.8.1
 
 * multi_type_vector
