--- a/NEWS
+++ b/NEWS
@@ -44,6 +44,11 @@ mdds 0.9.0
   * added position_type and const_position_type which are typedefs to
     the return types of position() methods.
 
+* multi_type_matrix:
+
+  * get_numeric(), get_boolean(), and get_string() are made more
+    efficient.
+
 mdds 0.8.1
 
 * multi_type_vector
