Update NEWS and up the version to 0.10.1.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+* multi_type_matrix
+
+  * added a variant of set_empty() that takes an additional length
+    parameter.
+
+    * void set_empty(size_type row, size_type col, size_type length)
+
 mdds 0.10.0
 
 * flat_segment_tree
