--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,10 @@
 mdds 0.11.1
 
+* all
+
+  * fixed a large number of outstanding defects reported by Coverity
+    Scan.
+
 * multi_type_vector
 
   * fixed 2 cases of double-free bug in the variant of swap() that
