Next version up will be 0.12.0.
Because of the API change with segment_tree.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+mdds 0.12.0
+
+* segment_tree
+
+  * remove pointer requirement from value_type to allow non-pointer
+    type to be stored.
+
 * multi_type_vector
 
   * fixed a bug in the equality operator method.
