We tend to use past tense for this stuff...

--- a/NEWS
+++ b/NEWS
@@ -9,7 +9,7 @@ mdds 0.12.0
 
 * segment_tree
 
-  * remove pointer requirement from value_type to allow non-pointer
+  * removed pointer requirement from value_type to allow non-pointer
     type to be stored.
 
 * multi_type_vector
