Set the next version and introduce API versioning.
The next release will have an API version of 1.0 and will require
C++11.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+mdds 0.13.0
+
+* all
+
+  * introduced API versioning to ease parallel installation of API
+    incompatible versions.
+
 mdds 0.12.1
 
 * flat_segment_tree
