Update authors from latest commit stats.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,11 @@
 Kohei Yoshida  <kohei.yoshida@gmail.com> (Maintainer)
 David Tardon  <dtardon@redhat.com>
-Fridrich Štrba <fridrich.strba@bluewin.ch>
 Markus Mohrhard <markus.mohrhard@googlemail.com>
-Petr Mladek <pmladek@suse.cz>
 Caolán McNamara <caolanm@redhat.com>
+William BONNET <william@wbonnet.net>
+Fridrich Štrba <fridrich.strba@bluewin.ch>
+Petr Mladek <pmladek@suse.cz>
 Philipp Thomas <pth@suse.de>
 Stephan Bergmann <sbergman@redhat.com>
+Heiko Becker <heirecka@exherbo.org>
 Tomáš Chvátal <scarabeus@gentoo.org>
