--- a/CHANGELOG
+++ b/CHANGELOG
@@ -11,6 +11,9 @@ mdds 1.2.0
 
   * null value no longer needs to be passed to the constructor.
 
+  * find() and prefix_search() now have a variant that can take a key
+    value that is of key_type directly.
+
 * trie_map
 
   * added begin() and end() methods that return read-only iterators.
@@ -21,6 +24,9 @@ mdds 1.2.0
     can be iterated.
 
   * null value no longer needs to be passed to the constructor.
+
+  * find(), insert, and prefix_search() now have a variant that can
+    take a key value that is of key_type directly.
 
 * sorted_string_map
 
